--- a/vercel.json
+++ b/vercel.json
@@ -35,11 +35,11 @@
       "dest": "index.js"
     },
     {
-      "src": "/users",
+      "src": "/user",
       "dest": "index.js"
     },
     {
-      "src": "/users/(.*)",
+      "src": "/user/(.*)",
       "dest": "index.js"
     },
     {
